@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Debian GnuTLS Maintainers <pkg-gnutls-maint@lists.alioth.debian.org>
 Uploaders: Andreas Metzler <ametzler@debian.org>, Eric Dorland <eric@debian.org>, James Westby <jw+debian@jameswestby.net>
-Build-Depends: debhelper (>= 5.0.0), libgcrypt11-dev (>= 1.3.2), zlib1g-dev, libopencdk10-dev (>= 0.6.5), cdbs, gtk-doc-tools, texinfo (>= 4.8), libtasn1-3-dev (>= 0.3.4-1), autotools-dev, guile-1.8-dev
+Build-Depends: debhelper (>= 5.0.0), libgcrypt11-dev (>= 1.3.2), zlib1g-dev, libopencdk10-dev (>= 0.6.5), cdbs, gtk-doc-tools, texinfo (>= 4.8), libtasn1-3-dev (>= 0.3.4-1), autotools-dev, guile-1.8-dev [!ia64]
 Build-Conflicts: libgnutls-dev
 Standards-Version: 3.7.3
 Homepage: http://www.gnutls.org/
